Fix modal z-index

--- a/styles.css
+++ b/styles.css
@@ -179,7 +179,7 @@ body {
   height: 100dvh;
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.4);
-  z-index: 1;
+  z-index: 1000;
 }
 
 .modal-content {
